--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <div id="boxes"></div>
 
-    <!-- <script src="./first-task.js" type="module"></script> -->
+    <script src="./first-task.js" type="module"></script>
     <script src="./second-task.js" type="module"></script>
     <script src="./third-task.js" type="module"></script>
     <script src="./fourth-task.js" type="module"></script>
